# sphinx-doc-gen

./: .gitignore
docs/: .dockerignore  .envrc_sample  Dockerfile  Makefile  environment  pyproject.toml
docs/source/: conf.py
