[tool.poetry]
name = "user-management-api"
version = "0.1.0"
description = ""
authors = ["Miyagawa Ryohei <ryohei06143510@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
commonmark = "^0.9.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.2"
recommonmark = "^0.7.1"
sphinx-markdown-tables = "^0.0.15"
sphinx-markdown-builder = "^0.5.4"
sphinxcontrib-plantuml = "^0.21"
pip = "^21.1.2"
install = "^1.3.4"
sphinxcontrib-pandoc-markdown = "^1.6.8"
six = "^1.16.0"
pandoc = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
